--- a/src/main/resources/public/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/scss/theme/default/itsm.scss
@@ -15,7 +15,7 @@
 @import '_elements.scss';
 @import '_buttons.scss';
 @import '_layout.scss';
-@import '_gnb.scss';
+@import '_navigation.scss';
 @import '_top.scss';
 @import '_alerts.scss';
 @import '_validations.scss';
