--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 </th:block>
-<th:block layout:fragment="aside">
+<th:block layout:fragment="defaultAside">
     <div class="aside code">
         <div class="code-content-edit flex-column">
             <div class="edit-form">
