--- a/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
@@ -27,7 +27,7 @@
         <div class="list" id="ruleList"></div>
     </div>
 </th:block>
-<th:block layout:fragment="aside">
+<th:block layout:fragment="defaultAside">
     <div class="aside">
         <div class="numbering-rule-content-edit flex-column">
             <div class="edit-form">
