--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -26,7 +26,7 @@
         <div class="list" id="roleList"></div>
     </div>
 </th:block>
-<th:block layout:fragment="aside">
+<th:block layout:fragment="defaultAside">
     <div class="aside">
         <div class="role-content-edit flex-column">
             <div class="edit-form">
