--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3267,46 +3267,10 @@ table[id=documentDisplay] td {
   height: 25rem;
 }
 
-.z-gnb {
+.z-navigation .z-gnb {
   width: 13.75rem;
 }
-.z-gnb .z-navigation {
-  position: fixed;
-  bottom: 0;
-  width: 13.75rem;
-  height: 9.375rem;
-  background-color: #222529;
-  z-index: 100;
-}
-.z-gnb .z-navigation .z-breadcrumb {
-  display: none;
-}
-.z-gnb .z-navigation-config .z-notification-count {
-  position: absolute;
-  margin: 0.3125rem 1rem;
-  padding: 0.125rem 0.625rem;
-  border-radius: 1.25rem;
-  -webkit-border-radius: 1.25rem;
-  -moz-border-radius: 1.25rem;
-  line-height: inherit;
-  font-size: 0.75rem;
-  font-weight: 700;
-  background-color: #929AA6;
-}
-.z-gnb .z-navigation-config .z-notification.z-active .notification-round {
-  fill: #0098FF;
-}
-.z-gnb .z-navigation-config .z-notification.z-active .notification-bell {
-  fill: #FFFFFF;
-}
-.z-gnb .z-navigation-config .z-notification.z-active .z-notification-count {
-  color: #FFFFFF;
-  background-color: #0098FF;
-}
-.z-gnb .z-navigation-config > div:hover {
-  background: #505559;
-}
-.z-gnb .z-logo {
+.z-navigation .z-gnb .z-logo {
   position: fixed;
   width: 13.75rem;
   height: 3.375rem;
@@ -3314,23 +3278,23 @@ table[id=documentDisplay] td {
   background-color: #222529;
   z-index: 100;
 }
-.z-gnb .z-menu {
+.z-navigation .z-gnb .z-menu {
   position: fixed;
   top: 3.375rem;
   width: 13.75rem;
-  height: calc(100vh - 9.375rem - 3.375rem);
+  height: calc(100vh - 3.375rem);
   background-color: #222529;
   z-index: 100;
   overflow: auto;
 }
-.z-gnb .z-menu .z-right {
+.z-navigation .z-gnb .z-menu .z-right {
   right: 0.375rem;
 }
-.z-gnb .z-menu-area .z-gnb {
+.z-navigation .z-gnb .z-menu-area .z-gnb {
   padding: 0.5rem 1.25rem 0.5rem 1.25rem;
   vertical-align: middle;
 }
-.z-gnb .z-menu-area .z-gnb .z-token-count {
+.z-navigation .z-gnb .z-menu-area .z-gnb .z-token-count {
   position: absolute;
   margin: 0.3125rem 9rem;
   padding: 0.125rem 0.625rem;
@@ -3343,38 +3307,38 @@ table[id=documentDisplay] td {
   background-color: #63686C;
   color: #ABB0B5;
 }
-.z-gnb .z-menu-area .z-gnb .z-token-count.z-active {
+.z-navigation .z-gnb .z-menu-area .z-gnb .z-token-count.z-active {
   color: #FFFFFF;
   background-color: #339AF0;
 }
-.z-gnb .z-menu-area .z-gnb-area {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area {
   line-height: 1.3;
   font-weight: 500;
 }
-.z-gnb .z-menu-area .z-gnb-area:first-child {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area:first-child {
   margin-top: 0.3125rem;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-gnb-link {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-gnb-link {
   cursor: pointer;
   color: #8B9094;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-gnb-link:hover:not(.z-active, .z-active-parent) {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-gnb-link:hover:not(.z-active, .z-active-parent) {
   color: #E1E6EA;
   background: #505559;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-gnb-link:hover:not(.z-active, .z-active-parent) .z-icon-gnb {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-gnb-link:hover:not(.z-active, .z-active-parent) .z-icon-gnb {
   background: #E1E6EA;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-gnb-link:hover:not(.z-active, .z-active-parent) .z-arrow-right, .z-gnb .z-menu-area .z-gnb-area .z-gnb-link:hover:not(.z-active, .z-active-parent) .z-arrow-down {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-gnb-link:hover:not(.z-active, .z-active-parent) .z-arrow-right, .z-navigation .z-gnb .z-menu-area .z-gnb-area .z-gnb-link:hover:not(.z-active, .z-active-parent) .z-arrow-down {
   background: #E1E6EA;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-gnb-link .z-menu-name {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-gnb-link .z-menu-name {
   display: inline-block;
   padding-left: 1.1875rem;
   font-weight: 500;
   line-height: 1.3rem;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-gnb-link .z-arrow-right {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-gnb-link .z-arrow-right {
   width: 0.75rem;
   height: 1.25rem;
   -webkit-mask-image: url("../media/icons/icon_menu_arrow_right.svg");
@@ -3388,7 +3352,7 @@ table[id=documentDisplay] td {
   margin-left: auto;
   float: right;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-gnb-link .z-arrow-down {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-gnb-link .z-arrow-down {
   width: 0.75rem;
   height: 1.25rem;
   -webkit-mask-image: url("../media/icons/icon_menu_arrow_bottom.svg");
@@ -3402,34 +3366,34 @@ table[id=documentDisplay] td {
   margin-left: auto;
   float: right;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-group {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-group {
   display: none;
   background-color: #222529;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area {
   font-size: 0.875rem;
   font-weight: 400;
   color: #8B9094;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area:hover {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area:hover {
   background-color: #505559;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link {
   display: block;
   cursor: pointer;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link .z-menu-name {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link .z-menu-name {
   display: inline-block;
   padding-left: 0.625rem;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-snb {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-snb {
   padding: 0.5rem 1.25rem 0.5rem 1.25rem;
   color: #CFD5D9;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-snb:hover:not(.z-active) {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-snb:hover:not(.z-active) {
   color: #E1E6EA;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-snb:hover:not(.z-active) .z-dot {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-snb:hover:not(.z-active) .z-dot {
   width: 0.25rem;
   height: 0.25rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_sub_dot.svg");
@@ -3440,17 +3404,17 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #E1E6EA;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link .z-icon-gnb-sub {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link .z-icon-gnb-sub {
   margin-left: 40px;
   padding-left: 6px;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-active {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-active {
   background-color: #171D21;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-active .z-menu-name {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-active .z-menu-name {
   color: #FFFFFF;
 }
-.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-active .z-dot {
+.z-navigation .z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-active .z-dot {
   width: 0.25rem;
   height: 0.25rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_sub_dot.svg");
@@ -3461,25 +3425,25 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #339AF0;
 }
-.z-gnb .z-menu-area .z-gnb.z-active {
+.z-navigation .z-gnb .z-menu-area .z-gnb.z-active {
   background-color: #171D21;
 }
-.z-gnb .z-menu-area .z-gnb.z-active .z-menu-name {
+.z-navigation .z-gnb .z-menu-area .z-gnb.z-active .z-menu-name {
   color: #FFFFFF;
 }
-.z-gnb .z-menu-area .z-gnb.z-active .z-icon-gnb {
+.z-navigation .z-gnb .z-menu-area .z-gnb.z-active .z-icon-gnb {
   background: #339AF0;
 }
-.z-gnb .z-menu-area .z-gnb.z-active-parent .z-menu-name {
+.z-navigation .z-gnb .z-menu-area .z-gnb.z-active-parent .z-menu-name {
   color: #FFFFFF;
 }
-.z-gnb .z-menu-area .z-gnb.z-active-parent .z-icon-gnb {
+.z-navigation .z-gnb .z-menu-area .z-gnb.z-active-parent .z-icon-gnb {
   background: #339AF0;
 }
-.z-gnb .z-menu-area .z-gnb.z-active-parent .z-arrow-right, .z-gnb .z-menu-area .z-gnb.z-active-parent .z-arrow-down {
+.z-navigation .z-gnb .z-menu-area .z-gnb.z-active-parent .z-arrow-right, .z-navigation .z-gnb .z-menu-area .z-gnb.z-active-parent .z-arrow-down {
   background: #FFFFFF;
 }
-.z-gnb .z-icon-gnb-board {
+.z-navigation .z-gnb .z-icon-gnb-board {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_board.svg");
@@ -3490,7 +3454,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-chart {
+.z-navigation .z-gnb .z-icon-gnb-chart {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_chart.svg");
@@ -3501,7 +3465,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-dashboard {
+.z-navigation .z-gnb .z-icon-gnb-dashboard {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_dashboard.svg");
@@ -3512,7 +3476,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-document {
+.z-navigation .z-gnb .z-icon-gnb-document {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_document.svg");
@@ -3523,7 +3487,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-download {
+.z-navigation .z-gnb .z-icon-gnb-download {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_download.svg");
@@ -3534,7 +3498,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-faq {
+.z-navigation .z-gnb .z-icon-gnb-faq {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_faq.svg");
@@ -3545,7 +3509,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-notice {
+.z-navigation .z-gnb .z-icon-gnb-notice {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_notice.svg");
@@ -3556,7 +3520,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-config {
+.z-navigation .z-gnb .z-icon-gnb-config {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_config.svg");
@@ -3567,7 +3531,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-workflow {
+.z-navigation .z-gnb .z-icon-gnb-workflow {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_workflow.svg");
@@ -3578,7 +3542,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-token {
+.z-navigation .z-gnb .z-icon-gnb-token {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_token.svg");
@@ -3589,7 +3553,7 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
-.z-gnb .z-icon-gnb-cmdb {
+.z-navigation .z-gnb .z-icon-gnb-cmdb {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_cmdb.svg");
