--- a/src/main/resources/public/template/cmdb/type/typeEdit.html
+++ b/src/main/resources/public/template/cmdb/type/typeEdit.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 </th:block>
-<th:block layout:fragment="aside">
+<th:block layout:fragment="defaultAside">
     <div class="aside tree">
         <div class="cmdb-type-content-edit flex-column">
             <div class="edit-form">
