--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -7,7 +7,7 @@
     <title th:text="#{cmdb.attribute.label.management}"></title>
 </head>
 <body>
-<th:block layout:fragment="content">
+<th:block layout:fragment="head">
     <div class="cmdb-attribute-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{cmdb.attribute.label.management}"></h1>
@@ -29,6 +29,8 @@
             </div>
         </div>
     </div>
+</th:block>
+<th:block layout:fragment="content">
     <div class="cmdb-attribute-content flex-fill">
         <div class="list" id="attributeList"></div>
     </div>
