--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<th:block layout:fragment="content">
+<th:block layout:fragment="head">
     <div class="custom-code-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{customCode.label.customCode}"></h1>
@@ -32,6 +32,8 @@
             </div>
         </div>
     </div>
+</th:block>
+<th:block layout:fragment="content">
     <div class="custom-code-content flex-fill">
         <div class="list" id="customCodeList"></div>
     </div>
