--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -7,7 +7,7 @@
     <title th:text="#{document.label.businessFlow}"></title>
 </head>
 <body>
-<th:block layout:fragment="content">
+<th:block layout:fragment="head">
     <div class="document-admin-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{document.label.businessFlow}"></h1>
@@ -38,6 +38,8 @@
             </div>
         </div>
     </div>
+</th:block>
+<th:block layout:fragment="content">
     <div class="document-admin-content flex-fill">
         <div class="list" id="documentList"></div>
     </div>
