--- a/src/main/resources/public/template/board/boardArticlesEdit.html
+++ b/src/main/resources/public/template/board/boardArticlesEdit.html
@@ -7,14 +7,16 @@
     <title th:text="${boardInfo != null} ? (${replyYn} ? #{board.label.reply} : #{board.label.edit}) : #{board.label.register}"></title>
 </head>
 <body>
+<th:block layout:fragment="head">
+    <div class="board-header">
+        <div class="header-title flex-row align-items-baseline">
+            <h1 th:text="#{board.label.board}"></h1>
+            <h6 class="description ml-2" th:text="#{board.msg.editDescription}"></h6>
+        </div>
+    </div>
+</th:block>
 <th:block layout:fragment="content">
     <div class="flex-column z-edit">
-        <div class="board-header">
-            <div class="header-title flex-row align-items-baseline">
-                <h1 th:text="#{board.label.board}"></h1>
-                <h6 class="description ml-2" th:text="#{board.msg.editDescription}"></h6>
-            </div>
-        </div>
         <div class="board-content-edit">
             <form id="boardForm" method="post" onsubmit="return false">
                 <div class="flex-column z-edit-row">
