--- a/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
@@ -7,14 +7,16 @@
     <title th:text="#{cmdb.attribute.label.view}"></title>
 </head>
 <body>
+<th:block layout:fragment="head">
+    <div class="cmdb-attribute-header">
+        <div class="header-title flex-row align-items-baseline">
+            <h1 th:text="#{cmdb.attribute.label.view}"></h1>
+            <h6 class="description ml-2" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
+        </div>
+    </div>
+</th:block>
 <th:block layout:fragment="content">
     <div class="flex-column z-edit">
-        <div class="cmdb-attribute-header">
-            <div class="header-title flex-row align-items-baseline">
-                <h1 th:text="#{cmdb.attribute.label.view}"></h1>
-                <h6 class="description ml-2" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
-            </div>
-        </div>
         <div class="cmdb-attribute-content-edit">
             <div class="flex-column z-edit-row">
                 <label for="attributeName">
