--- a/src/main/resources/public/template/download/downloadSearch.html
+++ b/src/main/resources/public/template/download/downloadSearch.html
@@ -7,7 +7,7 @@
     <title th:text="#{download.label.download}"></title>
 </head>
 <body>
-<th:block layout:fragment="content">
+<th:block layout:fragment="head">
     <div class="download-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{download.label.download}"></h1>
@@ -35,6 +35,8 @@
             </div>
         </div>
     </div>
+</th:block>
+<th:block layout:fragment="content">
     <div class="faq-content flex-fill">
         <div class="list" id="downloadList"></div>
     </div>
