--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -7,14 +7,16 @@
     <title th:text="${notice != null} ? #{notice.label.edit} : #{notice.label.register}"></title>
 </head>
 <body>
+<th:block layout:fragment="head">
+    <div class="notice-header">
+        <div class="header-title flex-row align-items-baseline">
+            <h1 th:text="#{notice.label.notice}"></h1>
+            <h6 class="description ml-2" th:text="#{notice.msg.editDescription}"></h6>
+        </div>
+    </div>
+</th:block>
 <th:block layout:fragment="content">
     <div class="flex-column z-edit">
-        <div class="notice-header">
-            <div class="header-title flex-row align-items-baseline">
-                <h1 th:text="#{notice.label.notice}"></h1>
-                <h6 class="description ml-2" th:text="#{notice.msg.editDescription}"></h6>
-            </div>
-        </div>
         <div class="notice-content-edit">
             <form id="frm" method="post">
                 <div class="flex-column z-edit-row">
