--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -7,7 +7,7 @@
     <title th:text="#{notice.label.notice}"></title>
 </head>
 <body>
-<th:block layout:fragment="content">
+<th:block layout:fragment="head">
     <div class="notice-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{notice.label.notice}"></h1>
@@ -31,6 +31,8 @@
             </div>
         </div>
     </div>
+</th:block>
+<th:block layout:fragment="content">
     <div class="notice-content flex-fill">
         <div class="list" id="noticeList"></div>
     </div>
