--- a/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
@@ -7,7 +7,7 @@
     <title th:text="#{pattern.label.pattern}"></title>
 </head>
 <body>
-<th:block layout:fragment="content">
+<th:block layout:fragment="head">
     <div class="numbering-pattern-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{pattern.label.pattern}"></h1>
@@ -23,12 +23,14 @@
             </div>
         </div>
     </div>
+</th:block>
+<th:block layout:fragment="content">
     <div class="numbering-pattern-content flex-fill">
         <div class="list" id="patternList"></div>
     </div>
 </th:block>
-<th:block layout:fragment="defaultAside">
-    <div class="aside">
+<th:block layout:fragment="aside">
+    <div class="z-aside">
         <div class="numbering-pattern-content-edit flex-column">
             <div class="edit-form">
                 <div class="edit-row flex-column">
