--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -8,7 +8,7 @@
     <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
 </head>
 <body>
-<th:block layout:fragment="content">
+<th:block layout:fragment="head">
     <div class="process-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{process.label.process}"></h1>
@@ -29,6 +29,8 @@
             </div>
         </div>
     </div>
+</th:block>
+<th:block layout:fragment="content">
     <div class="process-content flex-fill">
         <div class="list" id="processList"></div>
     </div>
