--- a/src/main/resources/public/template/scheduler/schedulerView.html
+++ b/src/main/resources/public/template/scheduler/schedulerView.html
@@ -7,14 +7,16 @@
     <title th:text="${schedule != null} ? #{scheduler.label.edit} : #{scheduler.label.register}"></title>
 </head>
 <body>
+<th:block layout:fragment="head">
+    <div class="scheduler-header">
+        <div class="header-title flex-row align-items-baseline">
+            <h1 th:text="#{scheduler.label.schedule}"></h1>
+            <h6 class="description ml-2" th:text="#{scheduler.msg.scheduleDescription}"></h6>
+        </div>
+    </div>
+</th:block>
 <th:block layout:fragment="content">
     <div class="flex-column z-edit">
-        <div class="scheduler-header">
-            <div class="header-title flex-row align-items-baseline">
-                <h1 th:text="#{scheduler.label.schedule}"></h1>
-                <h6 class="description ml-2" th:text="#{scheduler.msg.scheduleDescription}"></h6>
-            </div>
-        </div>
         <div class="scheduler-content-edit">
             <div class="flex-column edit-row">
                 <label for="taskName">
