--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -150,7 +150,7 @@
                         document.getElementById('tokenList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
                         setDateTimeFormat(document.getElementById('tokenList'));
-                        /*OverlayScrollbars(document.querySelector('.token-content'), {
+                        OverlayScrollbars(document.querySelector('.token-content'), {
                             className: 'scrollbar',
                             callbacks: {
                                 onScroll: function (e) {
@@ -173,7 +173,7 @@
                                     }
                                 }
                             }
-                        });*/
+                        });
                     }
                 }
             };
