--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -7,14 +7,16 @@
     <title th:text="#{user.label.editUserInfo}"></title>
 </head>
 <body>
+<th:block layout:fragment="head">
+    <div class="user-header">
+        <div class="header-title flex-row align-items-baseline">
+            <h1 th:text="#{user.label.editUserInfo}"></h1>
+            <h6 class="description ml-2" th:text="#{user.msg.editSelfDescription}"></h6>
+        </div>
+    </div>
+</th:block>
 <th:block layout:fragment="content">
     <div class="flex-column z-edit">
-        <div class="user-header">
-            <div class="header-title flex-row align-items-baseline">
-                <h1 th:text="#{user.label.editUserInfo}"></h1>
-                <h6 class="description ml-2" th:text="#{user.msg.editSelfDescription}"></h6>
-            </div>
-        </div>
         <div class="user-content-edit">
             <input type="hidden" id="userKey" name="userKey" th:value="${users?.userKey}"/>
             <input type="hidden" id="avatarUUID" name="avatarUUID" value=""/>
