--- a/src/main/resources/public/scss/template/_paging.scss
+++ b/src/main/resources/public/scss/template/_paging.scss
@@ -5,7 +5,7 @@
  * @author Jung Hee Chan
  */
 // TODO 리스트 페이지 디자인 적용 시 정리 필요.
-.itsm-container .#{$common-prefix}pagingArea {
+.z-itsm-container .#{$common-prefix}pagingArea {
   background-color: #F7F8F9;
 }
 
@@ -33,19 +33,12 @@
       min-width: 1.5rem;
       font-weight: $font-weight-regular;
       color: $paging-page-num-font-color;
-    }
-
-    .selectedPage {
-      a:link,
-      a:visited,
-      a:hover,
-      a:active {
+      &.selectedPage {
         font-weight: $font-weight-bold;
         color: $paging-current-page-font-color;
+        background-color: $paging-current-page-bg-color;
+        @include borderRadius(50%); // 24px
       }
-
-      background-color: $paging-current-page-bg-color;
-      @include borderRadius(50%); // 24px
     }
   }
 
