#10923 페이징 처리 - 오타 수정등

--- a/src/main/resources/public/template/layout/fragments/pagingAreaFragment.html
+++ b/src/main/resources/public/template/layout/fragments/pagingAreaFragment.html
@@ -3,8 +3,7 @@
 <div class="z-pagingArea flex-row">
     <a href="" id="pagingStartArrow" class="z-pagingArrow flex-row"><img src="/assets/media/icons/icon_paging_arrow_start.svg"></a>
     <a href="" id="pagingPrevArrow" class="z-pagingArrow flex-row"><img src="/assets/media/icons/icon_paging_arrow_prev.svg"></a>
-    <div class="z-pagingNumbers">
-    </div>
+    <div class="z-pagingNumbers"></div>
     <a href="" id="pagingNextArrow" class="z-pagingArrow flex-row"><img src="/assets/media/icons/icon_paging_arrow_next.svg"></a>
     <a href="" id="pagingEndArrow" class="z-pagingArrow flex-row"><img src="/assets/media/icons/icon_paging_arrow_end.svg"></a>
     <span id="spanCurrentPageNum"></span>
