--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -613,7 +613,7 @@ $validation-error-bg-color:                  $red50;
 $validation-success-color:                   $green600;
 $validation-success-bg-color:                $green100;
 
-////////////////////////////// validation /////////////////////////////
+////////////////////////////// paging /////////////////////////////
 $paging-current-num-font-color:              $gray500;
 $paging-page-num-font-color:                 $gray800;
 $paging-current-page-font-color:             $blue600;
