--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2880,7 +2880,8 @@ table[id=documentDisplay] td {
 .cmdb-class-header,
 .cmdb-type-header,
 .cmdb-ci-header,
-.scheduler-header {
+.scheduler-header,
+.report-template-header {
   padding: 0 3.75rem 0 3.75rem;
   background-color: #FAFAFA;
 }
@@ -2912,7 +2913,8 @@ table[id=documentDisplay] td {
 .cmdb-attribute-content,
 .cmdb-type-content,
 .cmdb-class-content,
-.cmdb-ci-content {
+.cmdb-ci-content,
+.report-template-content {
   padding: 0.9375rem 3.75rem;
   background-color: #F7F8F9;
 }
@@ -3250,6 +3252,13 @@ table[id=documentDisplay] td {
 }
 .cmdb-class-content-edit .attribute {
   width: 27.94rem;
+}
+
+.report-template-content-edit {
+  padding: 2.188rem 23.13rem 3.125rem 23.13rem;
+  border-top: 0.0625rem solid #EBEBEB;
+  background-color: #FFFFFF;
+  height: 100%;
 }
 
 .notice-content-view,
