--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -129,7 +129,8 @@
 .cmdb-class-header,
 .cmdb-type-header,
 .cmdb-ci-header,
-.scheduler-header {
+.scheduler-header,
+.report-template-header {
   padding: 0 3.75rem 0 3.75rem; // 0px 60px 0px 60px
   background-color: $neutral50;
 }
@@ -176,7 +177,8 @@
 .cmdb-attribute-content,
 .cmdb-type-content,
 .cmdb-class-content,
-.cmdb-ci-content{
+.cmdb-ci-content,
+.report-template-content {
   padding: 0.9375rem 3.75rem; // 15px 60px
   background-color: map-get($grays, "light");
 }
@@ -472,6 +474,13 @@
     .edit-row {  margin-top: 0.625rem; } // 10px
   }
   .attribute { width: 27.94rem; } // 447px;
+}
+// Report > Template
+.report-template-content-edit {
+  padding: 2.188rem 23.13rem 3.125rem 23.13rem; // 35px 370px 50px 370px
+  @include border(0.0625rem, solid, map-get($grays, 'line'), top); // 1px
+  background-color: $white;
+  height: 100%;
 }
 
 /////////////////////////////////////////////// VIEW /////////////////////////////////////////////////////
